調整y軸座標的 Range

--- a/rate_app/templates/rate_app/rate_data.html
+++ b/rate_app/templates/rate_app/rate_data.html
@@ -64,7 +64,7 @@
         // 基於準備好的DOM，初始化 Echarts
         var myChart = echarts.init(document.getElementById('main'));
 
-        // 指定图表的配置项和数据
+        // 指定圖表的配置和資料
         var option = {
           title: {
             text: '匯率資料數據圖'
